Fix z-index

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -238,7 +238,7 @@ nav {
   align-items: center;
   min-width: 250px;
   position: relative;
-  z-index: 3;
+  z-index: 0;
 }
 
 .social-media-icons img {
